# robot_learning

./: .gitignore  BUGFIX_SUMMARY.md  DATASET_EDITING_GUIDE.md  DatasetPlayground.ipynb  README.md  VIEWER_USAGE.md  camera_test.py  inspect_parquet.py  main.py  playground.ipynb  pyproject.toml  pyproject_GB200.toml  pyproject_groot_B200_x86.toml  test_calibration.py  test_video_loading.py  verify_dataset.py  view_all_episodes.py
camera_scripts/: realsense_test_rgb_only.py  turn_off_realsens_autoexposure.py  verify_realsense_camera.py  verify_realsense_timestsamp.py
configs/: record_with_cameras.yaml
docs/: BUILD_TORCHCODEC_FROM_SCRATCH.md  CALIBRATION_TEST_LOGIC.md  CORRECTION_DATA_IS_VALID.md  DATASET_SAFETY.md  DATASET_VERIFICATION_SUMMARY.md  DOCUMENTATION_INDEX.md  IS_MY_DATA_VALID.md  LEROBOT_DATASET.md  LEROBOT_DATASET_KNOWLEDGE_BASE.md  LEROBOT_DATA_PIPELINE.html  LEROBOT_TRAINING_PIPELINE.html  LEROBOT_TRAINING_PIPELINE.md  MODELS_WITH_STRONG_GENERALIZATION.md  PARQUET.md  README_LEROBOT_DATA_PIPELINE.md  RECORDING_AND_DATA_FORMAT.md  SO101_AVAILABLE_MODELS.md
scripts/: build_torchcodec.sh  eval_smolva.sh  example_dataset_workflow.sh  fix_torchvision_with_cu130.sh  rebuild_torch_vision.sh  record_data_with_realsense.sh  test_calibration.py  train_groot.sh  train_pi05.sh  train_smolva.sh  train_smolva_resume.sh  view_dataset_local.py  view_episodes.sh
