[project]
name = "robot-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cmake>=4.1.3",
    "lerobot[feetech,smolvla]",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pybind11>=3.0.1",
    "torch",
    "torchcodec",
]

[tool.uv.sources]
# Pin these packages to the index named "pytorch"
torch = { index = "pytorch" }
torchcodec = { git = "https://github.com/pytorch/torchcodec.git", rev = "v0.9.1" }
lerobot = { path = "../lerobot", editable = true }

[[tool.uv.index]]
# Define the index and give it a name
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.extra-build-dependencies]
torchcodec = ["torch","numpy"]
